[project]
name = "learn-rl"
version = "0.1.0"
description = ""
authors = [
    {name = "Ryohei Kondo",email = "ryohei9420@gmail.com"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "torch (>=2.11.0,<3.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "gymnasium[box2d] (>=1.2.3,<2.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "argparse (>=1.4.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
